--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/task/hasSent.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/task/hasSent.html
@@ -64,6 +64,20 @@ layout("/layouts/blank.html",{title:title}){
                                     return d.processFinished ? "<span style='color: #0080ff'>已结束</span>" : "<span>未结束</span>";
                                 }
                             },
+                            {
+                                field: 'processStatus', title: '流程状态', templet: function (d) {
+                                    if (d.processStatus == 'UNDER_REVIEW') {
+                                        return "<span style='color: #f700ff'>审核中</span>";
+                                    }
+                                    if (d.processStatus == 'IS_PASSED') {
+                                        return "<span style='color: #0080ff'>已通过</span>";
+                                    }
+                                    if (d.processStatus == 'NOT_PASS') {
+                                        return "<span style='color: #f3d380'>未通过</span>";
+                                    }
+                                    return d.processStatus;
+                                }
+                            },
                             {field: 'createTime', title: '开始时间'},
                             {title: '操作', align: 'center', width: 250, fixed: 'right', toolbar: '#toolBarFixed'},
                         ]],
