--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/table/from.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/table/from.html
@@ -66,9 +66,9 @@ layout("/layouts/blank.html",{title:title}){
                         <label class="col-sm-4 control-label lable-right">表类型<span class="required">*</span>：</label>
                         <div class="col-sm-6">
                             <select class="form-control" v-model="fromData.tableType">
+                                <option value="SingleTable">数据单表（工作流）</option>
                                 <option value="PrimaryTable">人员主表</option>
                                 <option value="Schedule">人员附表</option>
-                                <option value="SingleTable">数据单表</option>
                             </select>
                         </div>
                     </div>
@@ -77,7 +77,7 @@ layout("/layouts/blank.html",{title:title}){
                         <div class="col-sm-6">
                             <select class="form-control" v-model="fromData.formTemplate">
                                 <option value="1">三列排布</option>
-                                <option value="2">两列排布</option>
+                                <option value="2" selected>两列排布</option>
                             </select>
                         </div>
                     </div>
@@ -137,7 +137,7 @@ layout("/layouts/blank.html",{title:title}){
                                     </div>
                                 </div>
                                 <div class="form-group" style="margin-bottom: 30px">
-                                    <label class="col-sm-4 control-label lable-right">执行次数限制回写字段：</label>
+                                    <label class="col-sm-4 control-label lable-right">执行次数回写字段：</label>
                                     <div class="col-sm-6">
                                         <textarea type="text" v-model="triggers[index].frequencyLimitField" placeholder="执行次数限制回写字段"
                                                   style="resize: vertical" class="form-control"></textarea>
@@ -307,7 +307,7 @@ layout("/layouts/blank.html",{title:title}){
             },
             fromDataSubmit: false,
             fromDataEdit: true,
-            triggers: ${table.triggersJsonText!}
+            triggers: ${triggers!}
         },
         methods: {
             addTriggers: function () {
